src/objects/Consultant_Contacts__c.object
<CustomObject>
    <description>Consultant Contact is used to relate multiple consultant contact records to ratings, and strategy rating requests.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategy Ratings</relationshipLabel>
        <relationshipName>Consultant_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rating</label>
        <referenceTo>Consultant_Rating__c</referenceTo>
        <relationshipLabel>Consultant Contacts</relationshipLabel>
        <relationshipName>Consultant_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role1__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Field Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Consultant</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_Rating_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy Rating Process</label>
        <referenceTo>Strategy_Rating_Process__c</referenceTo>
        <relationshipLabel>Consultant Contacts</relationshipLabel>
        <relationshipName>Consultant_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Consultant Contact</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Consultant Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultant Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>